--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -181,6 +181,11 @@
                                 <small class="form-text text-muted">El JSON debe ser válido.</small>
                             </div>
 
+                            <div class="form-group">
+                                <label for="evaluationExercise">¿Es un ejercicio de evaluación?</label>
+                                <input type="checkbox" name="evaluationExercise" value="true">
+                            </div>                            
+
                             <input type="submit" value="Añadir ejercicio" class="btn btn-primary">
                         </form>
                     </div>
