Modificaciones en admin

--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -719,52 +719,27 @@
 
                 <!-- Formulario para Orden Global -->
                 <div class="card mb-4" id="globalOrderForm" style="display:none;">
-                    <div class="card-header">
-                        Administrar Orden Global
-                    </div>
-                    <div class="card-body">
-                        <form action="/admin/update_global_order" method="post">
-                            <div class="form-group">
-                                <label for="content_type">Tipo de Contenido:</label>
-                                <select name="content_type" class="form-control">
-                                    <option value="Exercises">Ejercicios</option>
-                                    <option value="Theory">Teoría</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="content_id">ID del Contenido:</label>
-                                <input type="number" name="content_id" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="global_order">Orden Global:</label>
-                                <input type="number" name="global_order" class="form-control" required>
-                            </div>
-                            <input type="submit" value="Actualizar Orden" class="btn btn-primary">
-                        </form>
-                    </div>
-
                     <!-- Tabla para mostrar los datos -->
                     <div class="card-header">
-                        Lista Orden Global
+                        Lista del Path Educativo
                     </div>
                     <div class="card-body">
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
-                                    <th>Orden Global</th>
-                                    <th>Tipo de Contenido</th>
-                                    <th>ID del Contenido</th>
+                                    <th>Posicion</th>
+                                    <th>Modulo</th>
+                                    <th>Id del Requisito</th>
                                     <th>ID</th>
-
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for order in global_orders %}
+                                {% for req in modules_requirements %}
                                     <tr>
-                                        <td>{{ order.global_order }}</td>
-                                        <td>{{ order.content_type }}</td>
-                                        <td>{{ order.content_id }}</td>
-                                        <td>{{ order.id }}</td>
+                                        <td>{{ req.order_position }}</td>
+                                        <td>{{ req.module_id }}</td>
+                                        <td>{{ req.requirement_id }}</td>
+                                        <td>{{ req.id }}</td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
