Reorganización de paquetes

--- a/app/templates/biblioteca.html
+++ b/app/templates/biblioteca.html
@@ -40,11 +40,11 @@ Biblioteca
         <!-- Relleno Página -->    
         <h2>Biblioteca de Programación</h2>
         <p>Aquí encontrarás información básica sobre algunos de los lenguajes de programación. ¡Haz clic en uno para aprender más!</p>
-        <a href="{{ url_for('student.logo_guide') }}" class="language-button">Logo</a>
-        <a href="{{ url_for('student.cpp_guide') }}" class="language-button">C++</a>
-        <a href="{{ url_for('student.python_guide') }}" class="language-button">Python</a>
-        <a href="{{ url_for('student.java_guide') }}" class="language-button">Java</a>
-        <a href="{{ url_for('student.web_guide') }}" class="language-button">HTML + CSS + JavaScript</a>
+        <a href="{{ url_for('general.logo_guide') }}" class="language-button">Logo</a>
+        <a href="{{ url_for('general.cpp_guide') }}" class="language-button">C++</a>
+        <a href="{{ url_for('general.python_guide') }}" class="language-button">Python</a>
+        <a href="{{ url_for('general.java_guide') }}" class="language-button">Java</a>
+        <a href="{{ url_for('general.web_guide') }}" class="language-button">HTML + CSS + JavaScript</a>
     </div>
 </main>
 {% endblock %}
