--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -202,7 +202,7 @@
     <nav class="side-nav">
         <ul>
             <li><a href="{{ url_for('student.principal') }}">Principal</a></li>
-            <li><a href="{{ url_for('student.biblioteca') }}">Biblioteca</a></li>
+            <li><a href="{{ url_for('general.biblioteca') }}">Biblioteca</a></li>
             <li><a href="{{ url_for('student.preguntas') }}">Preguntas</a></li>
             <li><a href="{{ url_for('student.rankings') }}">Rankings</a></li>
             <li><a href="{{ url_for('student.contenido') }}">Contenido</a></li>
