Finalizacion modulos, y ejercicios extras

--- a/app/templates/theory.html
+++ b/app/templates/theory.html
@@ -215,7 +215,7 @@ Teoria
 
     <div class="row mt-4">
         <div class="col-md-12">
-            <form action="{{ url_for('student.mark_theory_as_read', content_id=content_id) }}" method="post">
+            <form action="{{ url_for('exercise.mark_theory_as_read', content_id=content_id) }}" method="post">
                 <button type="submit" class="send-button">Siguiente</button>
             </form>
         </div>
