Alerta con requisitos validacion

--- a/app/templates/exercise.html
+++ b/app/templates/exercise.html
@@ -181,6 +181,10 @@ Ejercicio
         <input type="hidden" id="end-time" value="">
     </div>
 
+    <div class="alert-requirements">
+        <h3><strong>{{ alert_message }}</strong></h3>
+    </div>
+
     <div class="compiler-section">
         <h2>Prueba tu código:</h2>
 
