--- a/app/templates/biblioteca.html
+++ b/app/templates/biblioteca.html
@@ -40,7 +40,7 @@ Biblioteca
         <!-- Relleno Página -->    
         <h2>Biblioteca de Programación</h2>
         <p>Aquí encontrarás información básica sobre algunos de los lenguajes de programación. ¡Haz clic en uno para aprender más!</p>
-        <a href="{{ url_for('general.logo_guide') }}" class="language-button">Logo</a>
+        <!-- <a href="{{ url_for('general.logo_guide') }}" class="language-button">Logo</a> -->
         <a href="{{ url_for('general.cpp_guide') }}" class="language-button">C++</a>
         <a href="{{ url_for('general.python_guide') }}" class="language-button">Python</a>
         <a href="{{ url_for('general.java_guide') }}" class="language-button">Java</a>
